--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,13 @@
 /* Variables
 --------------------------------------------- */
 @import "./base/variables";
+@import "./base/root";
 @import "./utils/mixins";
 @import "./utils/functions";
+
+/* Typography
+--------------------------------------------- */
+@import "./base/typography";
 
 /* Tailwind
 --------------------------------------------- */
