--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,13 @@
+/* Font */
+$rem-base: 16;
+
+/* Colors */
 $green: #69bf4a;
 $blue: #044dd8;
 $white: #ffffff;
 $grey: #252525;
 $grey-secondary: #acb6c1;
+
+/* Screens */
+$min-width: 20rem;
+$max-width: 79.375rem;
