header basic layout

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,6 +22,10 @@
 --------------------------------------------- */
 @import "./base/global";
 
+/* Elements
+--------------------------------------------- */
+@import "./elements/buttons";
+
 /* Blocks
 --------------------------------------------- */
 @import "./blocks/header";
