--- a/src/scss/base/_root.scss
+++ b/src/scss/base/_root.scss
@@ -1,5 +1,6 @@
 :root {
   --green: #{$green};
+  --green-secondary: #{$green-secondary};
   --blue: #{$blue};
   --white: #{$white};
   --grey: #{$grey};
