text image implementation

--- a/src/scss/elements/_buttons.scss
+++ b/src/scss/elements/_buttons.scss
@@ -12,6 +12,11 @@
     background-color: $green;
   }
 
+  &__blue {
+    color: white;
+    background-color: $blue;
+  }
+
   &__icon {
     display: flex;
     align-items: center;
