--- a/src/scss/base/_root.scss
+++ b/src/scss/base/_root.scss
@@ -1,6 +1,7 @@
 :root {
   --green: #{$green};
   --green-secondary: #{$green-secondary};
+  --green-tertiary: #{$green-tertiary};
   --blue: #{$blue};
   --white: #{$white};
   --grey: #{$grey};
