--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -4,6 +4,7 @@ $rem-base: 16;
 /* Colors */
 $green: #69bf4a;
 $green-secondary: #a2e28b;
+$green-tertiary: #5ca342;
 $blue: #044dd8;
 $white: #ffffff;
 $grey: #252525;
