--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -22,4 +22,35 @@
       max-width: rem-calc(100);
     }
   }
+
+  &--list {
+    li {
+      margin-bottom: rem-calc(30);
+      opacity: 0;
+      transform: translateY(rem-calc(10));
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  &--navigation {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  &--main {
+    transition: 0.15s ease-in-out padding-top;
+
+    &__sticky {
+      padding-top: rem-calc(15);
+      position: fixed;
+      background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.5) 0%,
+        rgba(0, 0, 0, 0) 100%
+      );
+    }
+  }
 }
