--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -14,6 +14,11 @@
 .rich-text {
   a {
     text-decoration: underline;
+    transition: 0.15s ease-in-out color;
+
+    &:hover {
+      color: $blue;
+    }
   }
 
   strong,
