--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,6 +24,7 @@
 
 /* Elements
 --------------------------------------------- */
+@import "./elements/loader";
 @import "./elements/buttons";
 
 /* Blocks
